[package]
name = "xdp-top"
version = "0.2.0"
edition = "2021"
description = "A terminal utility to visualize XDP utilization and efficiency"
license = "MIT"
repository = "https://github.com/cwittenberg/xdp-top"
authors = ["Christian Wittenberg <christianwittenberg@gmail.com>"]

[package.metadata.deb]
maintainer = "Christian Wittenberg <christianwittenberg@gmail.com>"
copyright = "2026, Christian Wittenberg"
extended-description = "A throughput visualizer for eXpress Data Path (XDP) capable network cards."

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/xdp-top", dest = "/usr/bin/xdp-top", mode = "755" }
]

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
sysinfo = "0.30.7"
anyhow = "1.0.81"
regex = "1.10.3"